# battery_notifier

./: Cargo.toml  README.md  config.toml
src/: battery.rs  config.rs  main.rs  notification.rs
