[package]
name = "battery-notifier"
version = "0.0.0"
edition = "2021"
description = "Linux notification to battery"
homepage = "https://github.com/eduinlight/battery_notify"
repository = "https://github.com/eduinlight/battery_notify"
readme = "README.md"
keywords = ["battery"]
authors = ["Eduin Garcia Cordero <eduinlight@gmail.com>"]
categories = ["config"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.5.6"
battery = "0.7.8"
config = "0.12.0"
serde = "1.0.133"
once_cell="1.5.2"
home = "0.5.3"
